--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,16 @@
 {
-  "rewrites": [
+  "redirects": [
     {
       "source": "/",
-      "destination": "/api/auth"
+      "destination": "/api/auth",
+      "permanent": false,
+      "statusCode": 307
     }
   ],
-  "routes": [
+  "rewrites": [
     {
-      "src": "/api/(.*)",
-      "dest": "/api/$1"
+      "source": "/api/(.*)",
+      "destination": "/api/$1"
     }
   ]
 }
